# internet-archive-mcp

./: CLAUDE.md  README.md  pyproject.toml
src/internet_archive_mcp/: __init__.py  __main__.py  config.py  ia_client.py  server.py
src/internet_archive_mcp/tools/: __init__.py  collections.py  search_images.py
tests/: test_collections.py  test_collections_tool.py  test_config.py  test_ia_client.py  test_search_images_tool.py  test_server.py
